# models-under-pressure

./: .gitignore  .pre-commit-config.yaml  README.md  analyze_results.py  calculate_auroc_mean.py  compare_baseline_results.py  correct_examples1.jsonl  dashboard.py  dataset.csv  deception_labelled.csv  deception_results.jsonl  deception_results_old.jsonl  deception_results_processed.jsonl  extract_auroc_scores.py  generated_prompts_dataset.jsonl  lambda_instance_setup.sh  lambda_instance_setup_script.sh  lambda_instance_setup_script_2.sh  pyproject.toml  sandbag_examples.jsonl  sandbag_examples2.jsonl  saved_labelled_dataset.pkl  setup-new-machine.sh  situations_dataset.csv  sonnet_results_summary.txt  training_distribution.py
.github/workflows/: pr-checks.yml
config/: colm.yaml  config.yaml  eval_run_default_config.yaml  minimal.yaml  run_all_experiments_default.yaml  run_all_experiments_local.yaml
config/baseline/: llama3-1b-finetune.yaml
config/dataset/: synthetic-25-03-25.yaml  synthetic_19_03_25
config/eval_datasets/: balanced_ambiguous.yaml  dev_balanced.yaml  dev_raw.yaml  test_balanced.yaml  test_balanced_fixed.yaml  test_raw.yaml
config/experiments/: colm.yaml  monitoring_cascade.yaml  pytorch_mean_probe_test.yaml  scaling_plots.yaml
config/experiments/monitoring_cascade/: analyze.yaml  compute.yaml
config/model/: gemma-12b.yaml  gemma-1b.yaml  gemma-27b.yaml  llama-1b.yaml  llama-3b.yaml  llama-70b.yaml  llama-8b.yaml
config/probe/: attention.yaml  attention_light.yaml  difference_of_means.yaml  last.yaml  lda.yaml  max.yaml  max_of_rolling_mean.yaml  max_of_sentence_means.yaml  mean.yaml  mean_of_top_10.yaml  mean_of_top_100.yaml  mean_of_top_20.yaml  mean_of_top_5.yaml  mean_of_top_50.yaml  mean_of_top_k.yaml  per_entry.yaml  pytorch_attention_probe.yaml  pytorch_per_entry_probe_mean.yaml  pytorch_per_token_probe.yaml  sklearn.yaml  sklearn_mean_agg_probe.yaml  softmax.yaml
config/probes/: sklearn_probe.yaml
data/: prompts.csv  prompts.jsonl  prompts_with_metadata.csv
data/evals/: anthropic_samples.csv  deception_labelled.csv  joined_anthropic.csv  joined_mt.csv  joined_mts_dialogue.csv  joined_toolace.csv  manual_upsampled.csv  mmlu_sandbagging_labelled_dataset.jsonl  mt_samples.csv  mts_dialog_without_preprocessing.csv  mts_dialogue.csv  mts_samples.csv  mts_samples_balanced.jsonl  toolace_samples.csv  toolace_samples_balanced.jsonl
data/evals/dev/: anthropic_samples_balanced.jsonl  manual_upsampled.csv  mt_samples_balanced.jsonl  mts_samples_balanced.jsonl  toolace_samples_balanced.jsonl
data/evals/test/: aya_redteaming_balanced.csv  mental_health_balanced.jsonl  mt_samples_clean_balanced.jsonl  mts_samples_balanced.jsonl  toolace_samples_balanced.jsonl
data/inputs/: category_taxonomy.json  factor_taxonomy.json  factors_info.txt  labeling_rubric.md  metadata_fields.csv  prompt_variations.json  situation_examples_by_category.csv  situation_examples_by_factor.csv  situation_factors.json  situation_topics.csv  topics.json  variations_prompt_type.csv
data/training/: manual.csv  manual_combined.csv  prompts_25_03_25_gpt-4o.jsonl
lambda-setup-scripts/: alex.sh  phil.sh  urja.sh  will.sh
notebooks/: .gitignore  analyse_dataset.ipynb  analyze_probe_baseline_agreement.py  analyze_sweep.py  awareness_features_from_nathan.ipynb  compare_best_probe_against_baseline.py  compare_probes.py  creating_topics.ipynb  cv.ipynb  data_sequence_token_hist.ipynb  dom_stuff.py  fake_plots_for_leg_1_presentation.ipynb  figure_1.ipynb  figure_2.ipynb  filter_dataset.ipynb  finetuning_for_cascade.py  generalisation_heatmap.ipynb  heatmaps_impact.py  init_probe_code.ipynb  manual_review.py  mask_benchmark_heatmap.py  medical_transcriptions.ipynb  mentalhealth_redteaming_loader.py  per_token_probes.ipynb  plot.py  probe_generalisation_mvp.ipynb  probe_red_team.py  sandbagging_dataset.ipynb  scaling_plot.ipynb  subsample_balanced_test_sets.py  urja_tempy.py  why_is_perf_bad_for_short_seqs.py
rebuttal_scripts/: calculate_flops.py  fix_conversations.py  validate_conversation_turns.py
src/models_under_pressure/: __init__.py  activation_store.py  cli.py  config.py  dashboard.py  dataset.csv  dataset.py  dataset_store.py  dataset_utils.py  deception_data_processing.py  deception_temp.py  figures.py  finetune_baselines.py  generated_prompts_dataset.jsonl  generated_prompts_dataset2.jsonl  model.py  probes.py  pydra.py  r2.py  temp.py  temp2.py  training.py  utils.py  word_cloud.py
src/models_under_pressure/ais_datasets/: deception_datagen.py  deception_probes_paper.py  mask_benchmark.py  plot_deception.py  sandbagging.py
src/models_under_pressure/baselines/: baselines.py  continuation.py  finetune.py  generation.py  lora.py
src/models_under_pressure/dataset/: combine_situations.py  loaders.py  (+5 more)
temp_data/: dataset_18_feb.csv  dataset_19_feb.csv  red-green.csv
(+136 files in other folders)
