[project]
name = "models-under-pressure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Arrrlex", email = "me+github@alexmck.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy<2",
    "openai>=1.63.2",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "python-dotenv>=1.0.1",
    "streamlit>=1.42.1",
    "torch>=2.2,<2.3",
    "torchvision>=0.17.2",
    "wandb>=0.19.6",
    "wordcloud>=1.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=3.5.0",
    "pyright[nodejs]>=1.1.394",
]

[tool.ruff]
line-length = 88

[tool.pyright]
reportMissingParameterType = true
reportUnknownParameterType = true
