[project]
name = "models-under-pressure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Arrrlex", email = "me+github@alexmck.com" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.4.0",
    "jaxtyping>=0.2.38",
    "joblib>=1.4.2",
    "matplotlib>=3.10.0",
    "numpy<2",
    "openai>=1.63.2",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "python-dotenv>=1.0.1",
    "streamlit>=1.42.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.6",
    "torchvision>=0.17.2",
    "tqdm>=4.67.1",
    "transformers>=4.50.0",
    "typeguard>=4.4.2",
    "wandb>=0.19.6",
    "wordcloud>=1.9.4",
    "pandas-stubs>=2.2.3.241126",
    "huggingface>=0.0.1",
    "datasets>=3.3.2",
    "kaggle>=1.6.17",
    "spacy>=3.8.4",
    "typer>=0.15.2",
    "einops>=0.8.1",
    "deprecated>=1.2.18",
    "h5py>=3.13.0",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.2",
    "pytorch-lightning>=2.5.1",
    "lightning",
    "boto3>=1.37.27",
    "optuna>=4.2.1",
    "zstandard>=0.23.0",
    "pydantic-settings>=2.8.1",
    "memray>=1.17.1",
    "pyyaml>=6.0.2",
    "deepspeed>=0.16.7",
    "peft>=0.15.2",
    "evaluate>=0.4.3",
    "bitsandbytes>=0.45.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "openpyxl>=3.1.5",
    "pre-commit>=3.5.0",
    "pyright[nodejs]>=1.1.394",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
]

[project.scripts]
mup = "models_under_pressure.cli:app"

[tool.ruff]
line-length = 88
lint.extend-ignore = [
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
    "F722", # This interacts badly with jaxtyping
]

[tool.pyright]
reportMissingParameterType = true
reportUnknownParameterType = false

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
