[project]
name = "models-under-pressure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Arrrlex", email = "me+github@alexmck.com" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.4.0",
    "adjusttext>=1.3.0",
    "anthropic>=0.40.0",
    # "bitsandbytes>=0.45.5",
    "boto3>=1.37.27",
    "datasets>=3.3.2",
    "deepspeed>=0.16.7",
    "deprecated>=1.2.18",
    "einops>=0.8.1",
    "evaluate>=0.4.3",
    "h5py>=3.13.0",
    "huggingface>=0.0.1",
    "hydra-core>=1.3.2",
    "jaxtyping>=0.2.38",
    "joblib>=1.4.2",
    "kaggle>=1.6.17",
    "lightning",
    "matplotlib>=3.10.0",
    "memray>=1.17.1",
    "numpy<2",
    "omegaconf>=2.3.0",
    "openai>=1.63.2",
    "optuna>=4.2.1",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.241126",
    "peft>=0.15.2",
    "plotly>=6.0.0",
    "pytorch-lightning>=2.5.1",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "spacy>=3.8.4",
    "streamlit>=1.42.1",
    "torch==2.4",
    "torchvision>=0.17.2",
    "transformers>=4.50.0",
    "tqdm>=4.67.1",
    "typeguard>=4.4.2",
    "typer>=0.15.2",
    "wandb>=0.19.6",
    "wordcloud>=1.9.4",
    "zstandard>=0.23.0",
    # "bitsandbytes>=0.46.0",  # Commented out - not available on macOS ARM64
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "openpyxl>=3.1.5",
    "pre-commit>=3.5.0",
    "pyright[nodejs]>=1.1.394",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
]

[project.scripts]
mup = "models_under_pressure.cli:app"

[tool.ruff]
line-length = 88
lint.extend-ignore = [
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
    "F722", # This interacts badly with jaxtyping
]

[tool.pyright]
reportMissingParameterType = true
reportUnknownParameterType = false

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
